<resources>
    <string name="app_name">List</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="Add_New">Add New Item</string>
    <string name="edit">Edit Item</string>
    <string name="delete">Delete Item</string>
    <string name="save">Save Item</string>

    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="deleteItem">Confirm item deletion.</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="title_activity_activity_edit">CreateOrEdit</string>
</resources>
