<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_toRightOf="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextDescription"
            android:layout_toRightOf="@+id/editTextDescription"
            android:layout_alignParentLeft="true"
            android:text="@string/description"
            android:textSize="@dimen/text_size" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/save"
            android:textSize="@dimen/text_size"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                android:textSize="@dimen/text_size"/>

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/edit"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>